--- a/WpfApp1/views/AreaAddWindow.xaml
+++ b/WpfApp1/views/AreaAddWindow.xaml
@@ -100,9 +100,9 @@
         
         <ComboBox Grid.Row="6" 
                   Style="{StaticResource cbcenter}" 
-                  ItemsSource="{Binding  Source={StaticResource vm_area},  Path=CollectionFees, Mode=OneWay}" 
+                  ItemsSource="{Binding  Source={StaticResource vm_area},  Path=FeesModels, Mode=OneWay}" 
                   SelectedValue="{Binding Path=CurrentArea.ParkFeesId, Mode=TwoWay}"
-                  DisplayMemberPath="ParkFeesValue"
+                  DisplayMemberPath="FeesValue"
                   SelectedValuePath="ParkFeesId"
                   Grid.Column="2" />
         
