--- a/WpfApp1/views/ScannerPage.xaml
+++ b/WpfApp1/views/ScannerPage.xaml
@@ -24,7 +24,7 @@
             <ColumnDefinition Width="200"/>
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="0" >
-            <Image Source="{Binding Source={StaticResource scvm}, Path=Orignalimage, Mode=OneWay}" />
+            <Image Source="{Binding ImageSource.ImageOri, Mode=OneWay}" Stretch="Fill"  Width="290" Height="300" />
         </Grid>
         <Grid Grid.Column="1" >
             <Grid.RowDefinitions>
